--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 /*Whole page styling*/
 body {
     background-color: rgb(172, 252, 255);
-    background-image: url("background.jpg");
+    background-image: url("../images/background.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
