--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,12 @@
 /*Whole page styling*/
 body {
     background-color: rgb(172, 252, 255);
-    background-image: url("../images/background.jpg");
+    background-image: url("background.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     margin-bottom: 5%;
+    font-family: "Arial Nova";
 }
 
 /*Headline styling*/
@@ -67,8 +68,9 @@ input[type=button]:hover {
     display: block;
     text-align: center;
     margin-top: 1%;
-    margin-left: 33%;
-    margin-right: 33%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 34%;
     max-width: 34%;
     border-top-style: groove;
     border-left-style: groove;
@@ -85,14 +87,15 @@ input[type=button]:hover {
 }
 
 table {
-    table-layout: fixed;
+    margin-right: auto;
+    margin-left: auto;
     padding-bottom: 2%;
     font-size: 80%;
     font-size: 120%;
+    width: 100%;
 }
 
 tbody>tr>:nth-child(1) {
-    width: fit-content;
     padding: 2% 3% 1% 3%;
 }
 
@@ -100,12 +103,11 @@ tbody>tr>:nth-child(2) {
     border-bottom-style: solid;
     border-color: rgb(109, 177, 255);
     text-align: left;
-    width: 100%;
+    width: 75%;
     word-break: break-all;
 }
 
 tbody>tr>:nth-child(3) {
-    width: fit-content;
     padding: 2% 3% 1% 3%;
 }
 
